Remove 'required' attribute on message inputs

--- a/index.html
+++ b/index.html
@@ -271,14 +271,14 @@
           <h2>Message User</h2>
         </header>
         <form class="widget-container" id="message-form">
-          <input class="form-field" id="user-field" type="search" placeholder="Search for User" data-tooltip="Usernames can only contain letters and spaces." list="name-list" maxlength="32" required>
+          <input class="form-field" id="user-field" type="search" placeholder="Search for User" data-tooltip="Usernames can only contain letters and spaces." list="name-list" maxlength="32">
           <datalist id="name-list">
             <option>Victoria Chambers</option>
             <option>Dale Byrd</option>
             <option>Dawn Wood</option>
             <option>Dan Oliver</option>
           </datalist>
-          <textarea class="form-area" id="message-field" name="messageField" cols="30" rows="5" placeholder="Message for User" data-tooltip="Messages can only contain letters, numbers, whitespace, dashes, and underscores." maxlength="256" required></textarea>
+          <textarea class="form-area" id="message-field" name="messageField" cols="30" rows="5" placeholder="Message for User" data-tooltip="Messages can only contain letters, numbers, whitespace, dashes, and underscores." maxlength="256"></textarea>
           <button class="button-primary" id="send-button">Send</button>
         </form>
       </section>
