Rm warning status from password expiration notice

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <li class="state-success"><a href="#">You have 3 new followers</a>
             <button class="btn-close-notice" title="Close Notification" type="button">+</button>
           </li>
-          <li class="state-warning"><a href="#">Your password expires in 7 days</a>
+          <li class="state-success"><a href="#">Your password expires in 7 days</a>
             <button class="btn-close-notice" title="Close Notification" type="button">+</button>
           </li>
         </ul>
