--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
       <h1><span>Dashboard</span></h1>
 
-      <section class="alerts-container"><section class="alert alert-success" id="alert-settings"><p><strong class="type">Alert!</strong> You have notifications</p><button class="btn-close-alert" title="Close Alert" type="button">+</button></section></section>
+      <section class="alerts-container"><section class="alert" id="alert-settings"><p><strong class="type">Alert!</strong> You have notifications</p><button class="btn-close-alert" title="Close Alert" type="button">+</button></section></section>
 
       <section class="traffic" id="traffic">
         <header>
